fix: css breaking alignments

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,6 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 /*@import "@angular/material/prebuilt-themes/pink-bluegrey.css";*/
 
-* {
-  box-sizing: border-box;
-}
-
 html,
 body {
   height: 100%;
